fix table spacing

--- a/src/App.css
+++ b/src/App.css
@@ -36,10 +36,9 @@ table {
   overflow-x: auto;
 
   width: calc(var(--swatch-size) * 14 + 0.25em * 16);
-  margin: 1em;
-  margin-left: 0;
+  margin: 1em auto;
   box-sizing: border-box;
-  border-collapse: collapse;
+  border-spacing: 0 0.25em;
 
   font-variant-numeric: tabular-nums;
   text-align: center;
